--- a/app/src/main/res/layout/success_popup.xml
+++ b/app/src/main/res/layout/success_popup.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#62def8">
+    android:background="#D4D4D5">
 
     <TextView
         android:layout_width="wrap_content"
