--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,7 +20,13 @@
         android:label="fragment_blue"
         tools:layout="@layout/fragment_blue" >
         <argument
-            android:name="blueTitle"
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="id"
+            app:argType="string" />
+        <argument
+            android:name="birthday"
             app:argType="string" />
     </fragment>
     <fragment
