--- a/app/src/main/res/layout/fragment_add_student.xml
+++ b/app/src/main/res/layout/fragment_add_student.xml
@@ -11,8 +11,10 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -75,56 +77,91 @@
                     android:hint="Birth Date" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:padding="8dp"
-                android:layout_height="match_parent">
+            <EditText
+                android:id="@+id/in_date"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="82dp" />
 
-                <DatePicker
-                    android:id="@+id/date_picker"
-                    android:layout_width="match_parent"
-                    android:calendarViewShown="true"
-                    android:spinnersShown="false"
-                    android:layout_weight="4"
-                    android:layout_height="0dp" />
+            <Button
+                android:id="@+id/btn_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/in_date"
+                android:layout_toEndOf="@+id/in_date"
+                android:layout_toRightOf="@+id/in_date"
+                android:text="SELECT DATE" />
 
-                <TimePicker
-                    android:id="@+id/time_picker"
-                    android:layout_weight="4"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp" />
+            <EditText
+                android:id="@+id/in_time"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/in_date"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true" />
 
-                <Button
-                    android:id="@+id/date_time_set"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:text="Set"
-                    android:layout_height="0dp" />
+            <Button
+                android:id="@+id/btn_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btn_date"
+                android:layout_alignStart="@+id/btn_date"
+                android:layout_alignLeft="@+id/btn_date"
+                android:text="SELECT TIME" />
 
-            </LinearLayout>
+            <!--            <LinearLayout-->
+            <!--                xmlns:android="http://schemas.android.com/apk/res/android"-->
+            <!--                android:orientation="vertical"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:padding="8dp"-->
+            <!--                android:layout_height="match_parent">-->
+
+            <!--                <DatePicker-->
+            <!--                    android:id="@+id/date_picker"-->
+            <!--                    android:calendarViewShown="true"-->
+            <!--                    android:spinnersShown="false"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:gravity="center" />-->
+
+            <!--                <TimePicker-->
+            <!--                    android:id="@+id/time_picker"-->
+            <!--                    android:layout_weight="4"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="0dp" />-->
+
+            <!--                <Button-->
+            <!--                    android:id="@+id/date_time_set"-->
+            <!--                    android:layout_weight="1"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:text="Set birthday date and time"-->
+            <!--                    android:layout_height="0dp" />-->
+
+            <!--            </LinearLayout>-->
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/saveBtn"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="SAVE" />
+                <Button
+                    android:id="@+id/saveBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:text="SAVE" />
 
-            <Button
-                android:id="@+id/cancellBtn"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="CANCEL" />
+                <Button
+                    android:id="@+id/cancellBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:text="CANCEL" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
