--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,9 @@
         <argument
             android:name="birthday"
             app:argType="string" />
+        <argument
+            android:name="time"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/addStudentFragment"
