--- a/app/src/main/res/layout/fragment_blue.xml
+++ b/app/src/main/res/layout/fragment_blue.xml
@@ -7,10 +7,9 @@
     android:background="#FFFFFF"
     tools:context=".BlueFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editTimeEt"
+        android:editable="false"
         android:layout_width="286dp"
         android:layout_height="44dp"
         android:hint="Student birthday time"
@@ -29,6 +28,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editBirthdayEt"
+        android:editable="false"
         android:layout_width="286dp"
         android:layout_height="44dp"
         android:hint="Student birthday"
@@ -71,6 +71,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editIdEt"
+        android:editable="false"
         android:layout_width="286dp"
         android:layout_height="44dp"
         android:layout_marginTop="1dp"
@@ -101,6 +102,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editNameEt"
+        android:editable="false"
         android:layout_width="287dp"
         android:layout_height="40dp"
         android:layout_marginTop="22dp"
