--- a/app/src/main/res/layout/fragment_blue.xml
+++ b/app/src/main/res/layout/fragment_blue.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editTimeEt"
-        android:editable="false"
+        android:enabled="false"
         android:layout_width="286dp"
         android:layout_height="44dp"
         android:hint="Student birthday time"
@@ -28,7 +28,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editBirthdayEt"
-        android:editable="false"
+        android:enabled="false"
         android:layout_width="286dp"
         android:layout_height="44dp"
         android:hint="Student birthday"
@@ -71,7 +71,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editIdEt"
-        android:editable="false"
+        android:enabled="false"
         android:layout_width="286dp"
         android:layout_height="44dp"
         android:layout_marginTop="1dp"
@@ -83,10 +83,23 @@
         android:id="@+id/bluefrag_back_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="24dp"
         android:text="Edit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTimeEt" />
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Save"
+        android:visibility="invisible"
+        android:enabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.386"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTimeEt" />
 
@@ -100,9 +113,9 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
         android:id="@+id/editNameEt"
-        android:editable="false"
+        android:enabled="false"
         android:layout_width="287dp"
         android:layout_height="40dp"
         android:layout_marginTop="22dp"
